--- a/ss3_ma_gia_luu_do/New folder/chovy/chovy.html
+++ b/ss3_ma_gia_luu_do/New folder/chovy/chovy.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>star worlds 2022</title>
 </head>
 <body>
-$END$
+<h1></h1>
 </body>
 </html>
