--- a/ss5_form table/bai_tap3.html
+++ b/ss5_form table/bai_tap3.html
@@ -41,7 +41,7 @@
     </tr>
     <tr>
         <td>   </td>
-        <td><input type="text" name="genderr"></td>
+        <td><input type="text" name="gender"></td>
     </tr>
 </table>
 <h3>Which of the following products have your purchased in the last 2 months. Please check all that apply.</h3>
@@ -72,7 +72,6 @@
         <th style="background-color: #adadad">Strongly Disagree</th>
         <th style="background-color: #adadad">Disagree</th>
         <th style="background-color: #adadad">Agree</th>
-        <th style="background-color: #adadad">Strongly Agree</th>
     </tr>
     <tr class="tr">
         <th>Our products are priced fairly.</th>
