--- a/ss5_form table/test2.html
+++ b/ss5_form table/test2.html
@@ -2,41 +2,41 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Tạo form survey khách hàng</title>
+    <title>Survey</title>
 </head>
 <body>
-<h1>Market Research Survey</h1>
+<h2>Market Research Survey</h2>
 <p>Please take a few moments to complete this satisfaction survey.</p>
-<h3>What is your age range?</h3>
+<h4>What is your age range?</h4>
 <select>
     <option value=" ">18-24</option>
     <option>25-45</option>
     <option>45-60</option>
 
 </select>
-<h3>What is your yearly income range?</h3>
+<h4>What is your yearly income range?</h4>
 <select>
     <option value=" ">$0-$25,000</option>
     <option>$25,001-$50,000</option>
     <option>$50,001-$100,000</option>
 </select>
-<h3>Gender Identity</h3>
+<h4>Gender Identity</h4>
 <input type="radio" name="rd"/>male <br/>
 <input type="radio" name="rd"/> Female <br/>
 <input type="radio" name="rd"/> Nonbinary <br/>
 <input type="radio" name="rd"/> Other <br/>
-<h3>Which of the following products have your purchased in the last 2 months. Please check all that apply.</h3>
+<h4>Which of the following products have your purchased in the last 2 months. Please check all that apply.</h4>
 <input type="checkbox" name="hobby"> Product 1<br>
 <input type="checkbox" name="hobby"> Product 2<br>
 <input type="checkbox" name="hobby"> Product 3<br>
-<h3>How often would you use our new product?</h3>
+<h4>How often would you use our new product?</h4>
 <input type="radio" name="rd"/>Daily <br/>
 <input type="radio" name="rd"/> Weekly <br/>
 <input type="radio" name="rd"/> Monthly <br/>
-<h3>What would you pay for the new product?</h3>
+<h4>What would you pay for the new product?</h4>
 $ <input type="text"> <input type="text">
 <p>Dollar   Cent</p>
-<h3>What features would you like to see in the new product.</h3>
+<h4>What features would you like to see in the new product.</h4>
 <textarea size="1000"></textarea>
 <p>Please rate your level of agreement with the following statements.</p>
 <table border="4" >
@@ -71,4 +71,4 @@ $ <input type="text"> <input type="text">
 </table>
 <p><input type="button" name="btSubmit" value="Submit"/></p>
 </body>
-</html>
+</html
