--- a/ss2_code_org/test.html
+++ b/ss2_code_org/test.html
@@ -2,9 +2,44 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>Title</title>
 </head>
 <body>
-$END$
+<form action="/demo_123" method="get">
+    <fieldset>
+        <legend>Create student</legend>
+        <table>
+            <tr>
+                <td><label for="name">Name student:</label></td>
+                <td><input id="name" type="text" name="nameStudent" value="HaiTT123"><br></td>
+            </tr>
+            <tr>
+                <td>Date of birth:</td>
+                <td><input type="date" name="dateOfBirth"><br></td>
+            </tr>
+            <tr>
+                <td>Description:</td>
+                <td><textarea name="description"></textarea><br></td>
+            </tr>
+            <tr>
+                <td>Gender:</td>
+                <td>
+                    <input type="radio" name="gender" checked value="Nam"><br>
+                    <input type="radio" name="gender" value="Nữ"><br>
+                </td>
+            </tr>
+            <tr>
+                <td><button type="submit">Gửi</button></td>
+                <br>
+                <td> <input type="submit" value="Gửi"></td>
+            </tr>
+        </table>
+    </fieldset>
+</form>
+<select>
+    <option>Toán</option>
+    <option>Tiếng ANh</option>
+    <option>Toán</option>
+</select>
 </body>
 </html>
