--- a/ss5_form table/bai_tap4.html
+++ b/ss5_form table/bai_tap4.html
@@ -6,57 +6,101 @@
     <link rel="stylesheet" href="bai4.css">
 </head>
 <body>
-<h1>Thời khóa biểu </h1>
-<p id="p1">
+<h1 style="color: darkblue;">Thời khóa biểu </h1>
+<p style="color: darkgreen" id="p1">
     Lớp: H92c5 <br>
     Giáo viên: NhiNT <br>
     Phòng học: Class5 <br>
 </p>
-<p id="p2" >
+<p style="color: darkgreen" id="p2" >
     Thời gian học: 13h30 - 17h30 <br>
     Ngày học: Thứ 3,5,7
 </p> <br><br><br><br><br><br><br>
-<center>
-    <table border="1" cellpadding="25px" cellspacing="10px">
-        <tr>
-            <th></th>
-            <th></th>
-            <th></th>
-            <th style="background: gold">Thứ 3</th>
-            <th style="background: gold">Thứ 5</th>
-            <th style="background: gold">Thứ 7</th>
-        </tr>
-        <tr style="background: chocolate">
-            <th>Tuần</th>
-            <th>Ngày bắt đầu</th>
-            <th>Ngày kết thúc</th>
-            <th colspan="6">Môn học</th>
-        </tr>
-        <tr>
-            <td>01</td>
-            <td>01/09/2009</td>
-            <td>05/09/2008</td>
-            <td>CF-T1,L1</td>
-            <td>CF-T2,L2</td>
-            <td>CF-T3,L3</td>
-        </tr>
-        <tr>
-            <td>02</td>
-            <td>08/09/2009</td>
-            <td>12/09/2009</td>
-            <td>CF-T4,L4</td>
-            <td>CF-Written Test</td>
-            <td>C1-T1,L1</td>
-        </tr>
-        <tr>
-            <td>03</td>
-            <td>...</td>
-            <td>...</td>
-            <td>...</td>
-            <td>...</td>
-            <td>...</td>
-        </tr>
-    </table>
-</center>
+
+
+<table border="1">
+    <tr>
+        <th colspan="3"></th>
+        <th style="background-color: yellow"> thứ 3</th>
+        <th style="background-color: yellow"> thứ 5</th>
+        <th style="background-color: yellow"> thứ 7</th>
+    </tr>
+    <tr style="background-color: chocolate">
+        <th>Tuần</th>
+        <th>Ngày bắt đầu</th>
+        <th>Ngày kết thúc</th>
+        <th colspan="3">Môn học</th>
+    </tr>
+    <tr>
+        <td>01</td>
+        <td>01/09/2009</td>
+        <td>05/09/2009</td>
+        <td>CF-T1,L1</td>
+        <td>CF-T2,L2</td>
+        <td>CF-T3,L3</td>
+    </tr>
+    <tr>
+        <td>02</td>
+        <td>08/09/2009</td>
+        <td>12/09/2009</td>
+        <td>CF-T4,L4</td>
+        <td>CF-Written Test</td>
+        <td>C-T1,L1</td>
+    </tr>
+    <tr>
+        <td>03</td>
+        <td>...</td>
+        <td>...</td>
+        <td>...</td>
+        <td>...</td>
+        <td>...</td>
+    </tr>
+</table>
+
+
+
+
+<!--<center>-->
+<!--    <table border="1" cellpadding="25px" cellspacing="10px">-->
+<!--        <tr>-->
+<!--            <th></th>-->
+<!--            <th></th>-->
+<!--            <th></th>-->
+<!--            <th style="background: gold">Thứ 3</th>-->
+<!--            <th style="background: gold">Thứ 5</th>-->
+<!--            <th style="background: gold">Thứ 7</th>-->
+<!--        </tr>-->
+<!--        <tr style="background: chocolate">-->
+<!--            <th>Tuần</th>-->
+<!--            <th>Ngày bắt đầu</th>-->
+<!--            <th>Ngày kết thúc</th>-->
+<!--            <th colspan="6">Môn học</th>-->
+<!--        </tr>-->
+<!--        <tr>-->
+<!--            <td>01</td>-->
+<!--            <td>01/09/2009</td>-->
+<!--            <td>05/09/2008</td>-->
+<!--            <td>CF-T1,L1</td>-->
+<!--            <td>CF-T2,L2</td>-->
+<!--            <td>CF-T3,L3</td>-->
+<!--        </tr>-->
+<!--        <tr>-->
+<!--            <td>02</td>-->
+<!--            <td>08/09/2009</td>-->
+<!--            <td>12/09/2009</td>-->
+<!--            <td>CF-T4,L4</td>-->
+<!--            <td>CF-Written Test</td>-->
+<!--            <td>C1-T1,L1</td>-->
+<!--        </tr>-->
+<!--        <tr>-->
+<!--            <td>03</td>-->
+<!--            <td>...</td>-->
+<!--            <td>...</td>-->
+<!--            <td>...</td>-->
+<!--            <td>...</td>-->
+<!--            <td>...</td>-->
+<!--        </tr>-->
+<!--    </table>-->
+<!--</center>-->
 </body>
 </html>
