--- a/ss7_bien_kieu_du_lieu_toan_tu/bai_tap_dien_tich-hinh-tron.html
+++ b/ss7_bien_kieu_du_lieu_toan_tu/bai_tap_dien_tich-hinh-tron.html
@@ -2,9 +2,18 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Diện tích hình tròn</title>
+    <title>Title</title>
 </head>
 <body>
 
+<p id="demo">click</p>
 </body>
 </html>
+<script>
+    inputa = prompt("ban kinh ");
+    const b = 3.14;
+    let a = parseInt(inputa);
+    let dien_tich_hinh_tron = a*a*b;
+    document.write("dien_tich_hinh_tron is a "+ dien_tich_hinh_tron);
+
+</script>
