--- a/ss10_cau_truc_lap_1/bai_luyen_tap_vong_lap_1/bai 2.html
+++ b/ss10_cau_truc_lap_1/bai_luyen_tap_vong_lap_1/bai 2.html
@@ -7,4 +7,20 @@
 <body>
 
 </body>
+<script>
+    let nhietDo = prompt("nhập nhiệt độ");
+   while (nhietDo > 120 || nhietDo < 20) {
+       if (nhietDo > 120) {
+           alert('giảm nhiệt độ');
+           nhietDo = prompt('nhập lại');
+       } if (nhietDo < 20) {
+           alert('tăng nhiệt độ');
+           nhietDo = prompt('nhập lại');
+       }
+   }
+   document.write('nhiệt độ bình thờng = ' + nhietDo);
+</script>
+<script>
+
+</script>
 </html>
