--- a/ss10_cau_truc_lap_1/bai_tap_sinh_bang_cuu_chuong.html
+++ b/ss10_cau_truc_lap_1/bai_tap_sinh_bang_cuu_chuong.html
@@ -5,13 +5,15 @@
     <title>Title</title>
 </head>
 <body>
+<h1>Bảng Cửu Chương</h1>
+</body> <table>
 
-</body>
-</html>
+</table>
 <script>
-    let x = 1;
-    for (let i = 0; i < 3; i++) {
-        x = x + 1;
+    for (i = 0; i < 8; i++) {
+        for (j = 0; j < 9; j++) {
+
+        }
     }
-    console.log(x);
 </script>
+</html>
