--- a/ss9_cau_truc_dieu_kien_2/bai 10.html
+++ b/ss9_cau_truc_dieu_kien_2/bai 10.html
@@ -16,13 +16,23 @@
 </h4>
 Số chữ điện<input id="a"><br>
 <button onclick="giaTri()">Kiểm tra</button>
-<p id="giaTri"></p>
+<p id="triGia"></p>
 </body>
 <script>
     function giaTri() {
-        let a= parseFloat(document.getElementById('a').value);
-        if (a>0 && a<50) {
-            document.getElementById('giaTri').innerText=
+        let a = parseInt(document.getElementById('a').value);
+        if (a > 0 && a <= 50) {
+            document.getElementById('triGia').innerText = "Số tiến phải trả là: " + a * 1.678 + "VND";
+        } else if (a > 50 && a <= 100) {
+            document.getElementById('triGia').innerText = "Số tiền phải trả là: " + a * 1.734 + "VND";
+        } else if (a > 100 && a <= 200) {
+            document.getElementById('triGia').innerText = "Số tiền phải trả là: " + a * 2.014 + "VND";
+        } else if (a > 200 && a <= 300) {
+            document.getElementById('triGia').innerText = "Số tiền phải trả là: " + a * 2.536 + "VDN";
+        } else if (a > 300 && a <= 400) {
+            document.getElementById('triGia').innerText = "Số tiền phải trả là: " + a * 2.834 + "VND";
+        } else {
+            document.getElementById('triGia').innerText = "Số tiền phải trả là:  " + a * 2.927 + "VND";
         }
     }
 </script>
