--- a/ss11_mang/bai_luyen_tap_mang__1/bai 4.html
+++ b/ss11_mang/bai_luyen_tap_mang__1/bai 4.html
@@ -15,7 +15,7 @@
         (result.push(str[revert]))
         revert--;
     }
-    alert('Chuoi dao nguoc la: '+result.join());
+    alert('Chuoi dao nguoc la: '+result.join(''));
 </script>
 </body>
 </html>
