--- a/ss10_cau_truc_lap_1/bai_tap_sinh_bang_cuu_chuong.html
+++ b/ss10_cau_truc_lap_1/bai_tap_sinh_bang_cuu_chuong.html
@@ -10,10 +10,15 @@
 
 </table>
 <script>
-    for (i = 0; i < 8; i++) {
-        for (j = 0; j < 9; j++) {
-
+    let sout = "<table border = '1' width = '100%' cellspacing = '0' cellpadding = '0' style='border-collapse: collapse;'>"
+    for (let i = 1; i <= 10; i ++){
+        sout += "<tr>"
+        for (let j = 1; j <=10; j++) {
+            sout += "<td>" + j + "x" + i + "=" + j*i + "<td>";
         }
+        sout += "</tr>";
     }
+    sout += "</table>";
+    document.write(sout);
 </script>
 </html>
