--- a/ss11_mang/bai_tap_su_dung_cac_ham_co_san_cua_mang/bai 1.html
+++ b/ss11_mang/bai_tap_su_dung_cac_ham_co_san_cua_mang/bai 1.html
@@ -5,6 +5,28 @@
     <title>Title</title>
 </head>
 <body>
+<button>Đi chợ</button>
+<script>
 
+    function xinTienVo() {
+        console.log(abc)
+        console.log("Xin tiền.");
+        let temp = prompt("Vợ cho bao tiền: ");
+        return temp;
+    }
+
+    function diCho() {
+        let money = xinTienVo();
+        console.log("Lấy xe và đi đến chợ");
+        console.log("Mua đồ.");
+        if (money > 50000) {
+            console.log("Mua thịt");
+        } else {
+            console.log("Mua rau ăn chay.")
+        }
+    }
+
+    console.log(money)
+</script>
 </body>
 </html>
