--- a/ss11_mang/bai_luyen_tap_mang_2/bai 1.html
+++ b/ss11_mang/bai_luyen_tap_mang_2/bai 1.html
@@ -6,11 +6,11 @@
 </head>
 <body>
 <script>
-    let arr = [[1,2,1,24],[8,11,9,4],[7,0,7,24],[2,5,4,8]]
+    let arr = [[1,2,1,24],[8,11,9,4],[7,0,7,27],[7,4,28,14],[3,10,26,7]];
     for (let i=0;i<arr.length;i++){
         for (let j=0;j<arr[i].length;j++){
-            document.write(arr[i][j])
-            document.write("<br>")
+            document.write(arr[i][j]);
+            document.write("<br>");
         }
     }
 </script>
