--- a/ss11_mang/bai_luyen_tap_mang_2/bai 4.html
+++ b/ss11_mang/bai_luyen_tap_mang_2/bai 4.html
@@ -6,18 +6,17 @@
 </head>
 <body>
 <script>
-    let arrayOfStudentC09 = prompt('nhập số sv');
-
-    let count =1
-    if (arrayOfStudentC09.length<1){
-        document.write('nhập lại')
+    let arr = prompt('nhập dãy số');
+    let count=0;
+    if (arr.length<1){
+        alert('nhập lại')
     }else {
-        for (i=0; i<arrayOfStudentC09.length; i++){
-            if (arrayOfStudentC09[i]===' '){
+        for (i=0; i<arr.length; i++){
+            if (arr[i] === ' '){
                 count ++
             }
         }
-    }document.write('số từ là :'+count)
+    } document.write('số từ là :' + count)
 </script>
 </body>
 </html>
