--- a/ss11_mang/bai_luyen_tap_mang_2/bai 5.html
+++ b/ss11_mang/bai_luyen_tap_mang_2/bai 5.html
@@ -8,15 +8,20 @@
 <script>
     let string1 = prompt("Nhập chuỗi 1: ");
     let string2 = prompt("Nhập chuỗi 2: ");
-
+    let kiemTra = false;
     if (string1.length != string2.length) {
         alert("Chuỗi 1 khác với chuỗi 2");
     } else {
-        for (let i = 0; string1.length; i++) {
-            if (string1[i] = string2[i]) {
-                alert("Chuỗi 1 bằng chuỗi 2");
+        for (let i = 0; i < string1.length; i++) {
+            if (string1[i] === string2[i]) {
+                document.write("Chuỗi 1 bằng chuỗi 2");
+            } else {
+                document.write("Chuỗi 1 khác chuỗi 2");
                 break;
-            } else alert("Chuỗi 1 khác chuỗi 2");
+            }
+        }
+        if (kiemTra = true) {
+            document.write("Chuỗi 1 bằng chuỗi 2");
         }
     }
 </script>
