--- a/ss11_mang/bai_luyen_tap_mang_2/bai 6.html
+++ b/ss11_mang/bai_luyen_tap_mang_2/bai 6.html
@@ -6,7 +6,14 @@
 </head>
 <body>
 <script>
-    
+    let arr = prompt("Nhập vào mảng ký tự");
+    let arr1;
+    for (let i = 0; i < arr.length;  i++) {
+        if (arr[i] === '-') {
+            arr1 = arr.replace('-','_');
+            document.write(arr1);
+        }
+    }
 </script>
 </body>
 </html>
