--- a/ss12_ham/bai_luyen_tap_tao_va_su_dung_ham_1/bai 2.html
+++ b/ss12_ham/bai_luyen_tap_tao_va_su_dung_ham_1/bai 2.html
@@ -5,8 +5,13 @@
     <title>Title</title>
 </head>
 <body>
+<button onclick="kiemTra()">Bấm vào</button>
 <script>
-
+    function kiemTra() {
+        let nhapVao = +prompt("Nhập vào một đối số dạng số");
+        let ketQua = nhapVao + 1;
+        document.write(ketQua);
+    }
 </script>
 </body>
 </html>
