--- a/ss10_cau_truc_lap_1/bai_luyen_tap_vong_lap_2/bai 2.html
+++ b/ss10_cau_truc_lap_1/bai_luyen_tap_vong_lap_2/bai 2.html
@@ -6,15 +6,12 @@
 </head>
 <body>
 <script>
-    let n = 5;
-    let giaiThua;
-    // giaiThua = 5*4*3*2*1;
-    // giaiThua = 5*(5-1)*(5-2)*(5-3)*(5-4);
-    for (let i = 0; i < 4; i++) {
-
+    let n = prompt('Nhập số nguyên dương');
+    let giaiThua = 1;
+    for (let i = 1; i <= n; i++) {
+        giaiThua = giaiThua * i
     }
-    console.log("kq " + giaiThua)
-    // alert(giaiThua);
+    alert("Kết quả " + giaiThua)
 </script>
 </body>
 </html>
