--- a/ss12_ham/bai_luyen_tap_tao_va_su_dung_ham_2/bai_5.html
+++ b/ss12_ham/bai_luyen_tap_tao_va_su_dung_ham_2/bai_5.html
@@ -5,6 +5,12 @@
     <title>Title</title>
 </head>
 <body>
+<script>
+    let a = prompt("Nhập số nguyên thứ 1");
+    let b = prompt("Nhập số nguyên thứ 2");
+    let c = prompt("Nhập số nguyên thứ 3");
+    let value;
 
+</script>
 </body>
 </html>
