--- a/luyen_tap_lai_bai_tap_vong_lap_1/bai_5.html
+++ b/luyen_tap_lai_bai_tap_vong_lap_1/bai_5.html
@@ -10,14 +10,13 @@
     let number2 = 1;
     let number3;
     let tong = 0;
-    for (let i= 0; i < 20; i++) {
+    for (let i = 0; i < 20; i++) {
         number3 = number1 + number2;
         number1 = number2;
         number2 = number3;
         document.write(number3 + '<br>');
         tong = tong + number3;
-    }
-    document.write("Tổng =" + tong)
+    } document.write("Tổng là " + tong)
 </script>
 </body>
 </html>
