--- a/ss12_ham/bai_luyen_tap_tao_va_su_dung_ham_2/bai_5.html
+++ b/ss12_ham/bai_luyen_tap_tao_va_su_dung_ham_2/bai_5.html
@@ -9,8 +9,16 @@
     let a = prompt("Nhập số nguyên thứ 1");
     let b = prompt("Nhập số nguyên thứ 2");
     let c = prompt("Nhập số nguyên thứ 3");
-    let value;
-
+    giaTri(a, b, c);
+    function giaTri(a,b,c) {
+        if (a < b && a < c) {
+            document.write(a + " là số nhỏ nhất");
+        } else if (b < a && b < c) {
+            document.write(b + " là số nhỏ nhất");
+        } else {
+            document.write(c + " là số nhỏ nhất");
+        }
+    }
 </script>
 </body>
 </html>
