--- a/ss12_ham/bai_luyen_tap_tao_va_su_dung_ham_2/bai_7.html
+++ b/ss12_ham/bai_luyen_tap_tao_va_su_dung_ham_2/bai_7.html
@@ -10,9 +10,9 @@
     let b = prompt("Nhập vào số nguyên thứ hai");
     doiCho(a,b);
     function doiCho(a,b) {
-        let cont = a;
+        let c = a;
         a = b;
-        b = cont;
+        b = c;
         document.write("Số nguyên thứ nhất là : "+a +"<br>" +"Số nguyên thứ hai là : "+b);
     }
 </script>
