--- a/ss12_ham/bai_luyen_tap_tao_va_su_dung_ham_2/bai_8.html
+++ b/ss12_ham/bai_luyen_tap_tao_va_su_dung_ham_2/bai_8.html
@@ -6,7 +6,13 @@
 </head>
 <body>
 <script>
-
+    let a = prompt("Nhập chuỗi số nguyên");
+    daoNguoc(a);
+    function daoNguoc(a) {
+        let b = a.split("");
+        b.reverse();
+        alert(b);
+    }
 </script>
 </body>
 </html>
