--- a/ss11_mang/bai_luyen_tap_mang__1/bai 8.html
+++ b/ss11_mang/bai_luyen_tap_mang__1/bai 8.html
@@ -10,7 +10,7 @@
     for (let i = 0; i < 10; i++) {
         arrNumber[i]= +prompt(" Nhập số nguyên " + i);
     }
-    document.write(arrNumber);
+    document.write(arrNumber[i]);
     arrNumber.sort(function (a,b) {
         return b - a
     })
