--- a/ss12_ham/bai_luyen_tap_tao_va_su_dung_ham_1/bai_3.html
+++ b/ss12_ham/bai_luyen_tap_tao_va_su_dung_ham_1/bai_3.html
@@ -6,8 +6,10 @@
 </head>
 <body>
 <script>
-    let ketQua = soSanh(+prompt('Nhập vào số a'), +prompt('Nhập vào số b'));
-    alert(ketQua)
+    let a = +prompt('Nhập vào số a');
+    let b = +prompt('Nhập vào số b');
+    let kQ = soSanh(a,b);
+    alert(kQ);
     function soSanh(a,b) {
         let ketQua ;
         if (a>b) {
@@ -15,7 +17,7 @@
         } else {
             ketQua = +(a + b) ;
         }
-        return ketQua
+        return ketQua;
     }
 </script>
 </body>
