--- a/ss12_ham/bai_luyen_tap_tao_va_su_dung_ham_2/bai_3.html
+++ b/ss12_ham/bai_luyen_tap_tao_va_su_dung_ham_2/bai_3.html
@@ -6,8 +6,8 @@
 </head>
 <body>
 <script>
-    let b = prompt("Nhập số nguyên bất kỳ");
-    factorial(b);
+    let a = prompt("Nhập số nguyên bất kỳ");
+    factorial(a);
     function factorial(a) {
         let ketQua = 1;
         for (let i = 1; i <= a; i++) {
