--- a/ss12_ham/bai_tap_ham_kiem_tra_so_nguyen_to.html
+++ b/ss12_ham/bai_tap_ham_kiem_tra_so_nguyen_to.html
@@ -6,15 +6,19 @@
 </head>
 <body>
 <script>
-    // let a = prompt("Nhập số nguyên bất kỳ");
-
-        for (let i = 2; i < 10000; i++) {
-            if (i % i === 0 && i % 1 === 0) {
-                document.write(i + "<br>");
-            } else {
-
+    function isPrime(b) {
+        let test = true;
+        for (let i = 2; i <= Math.sqrt(b); i++) {
+            if (b % i == 0) {
+                test = false;
+                break;
             }
         }
+        if (test) alert(b + ' là số nguyên tố');
+        else alert(b + ' không phải là số nguyên tố');
+    }
+    let a = parseInt(prompt('Nhập vào số nguyên bất kỳ'));
+    isPrime(a);
 
 </script>
 </body>
