--- a/ss11_mang/bai_luyen_tap_mang__1/bai 6.html
+++ b/ss11_mang/bai_luyen_tap_mang__1/bai 6.html
@@ -8,7 +8,7 @@
 <script>
     let arrNumber= [];
     for (let i = 0; i< 10; i++) {
-        arrNumber[i]= prompt("Nhập chuỗi số nguyên" + 1);
+        arrNumber[i]= prompt("Nhập chuỗi số nguyên " + i);
     }
     let V= prompt("Nhập số nguyên bất kỳ");
     let kiemTra = false;
