--- a/Case_Study/3_mang_va_loop/bai_2.html
+++ b/Case_Study/3_mang_va_loop/bai_2.html
@@ -21,13 +21,13 @@
                 break;
             }
           }
-        if (kiemTra = false){
+        if (kiemTra === false){
             for (let l = 0; l < arr3.length;l++) {
                 if (arr2[i] === arr3[l]) {
                     kiemTra1 = true;
                 }
             }
-            if (kiemTra1 = false) {
+            if (kiemTra1 === false) {
                 arr3.push(arr2[i]);
             }
         }
