--- a/Case_Study/3_mang_va_loop/bai_3.html
+++ b/Case_Study/3_mang_va_loop/bai_3.html
@@ -18,7 +18,7 @@
             chiSo = i;
         }
     }
-    document.write('Vậy phân số lớn nhất là ' + ketQua + ',' + ' có chỉ số là ' + chiSo);
+    document.write('Phân số lớn nhất là ' + ketQua + ',' + ' có chỉ số là ' + chiSo);
 </script>
 </body>
 </html>
