--- a/Case_Study/3_mang_va_loop/bai_1.html
+++ b/Case_Study/3_mang_va_loop/bai_1.html
@@ -8,13 +8,9 @@
 <script>
     let a = [1,2,3,4,5,6];
     let b = [];
-    let c = a[0];
-    for (let i = 0; i < a.length; i++) {
-        for (let j = 1; j < i; j++) {
-            c = c + a[j];
-        }
-        b[i] = c;
-        c = a[0];
+    b[0] = a[0];
+    for (let i = 0; i < a.length - 1; i++) {
+        b[i + 1] = b[i] + a[i + 1];
     } document.write(b.join(','));
 </script>
 </body>
