--- a/Case_Study/3_mang_va_loop/bai_4.html
+++ b/Case_Study/3_mang_va_loop/bai_4.html
@@ -18,7 +18,7 @@
             }
         }
     }
-    document.write(ketQua.join(','));
+    document.write(ketQua + ' ');
 </script>
 </body>
 </html>
