--- a/Case_Study/4_string/bai_1.html
+++ b/Case_Study/4_string/bai_1.html
@@ -5,6 +5,33 @@
     <title>Title</title>
 </head>
 <body>
+<script>
+        let string = prompt("Nhập vào chuỗi bất kỳ");
+        let arr = string.toLowerCase().split(" ");
+        document.write( "Trước khi chuyển hóa: " + string + "<br>");
+        for (let i = 0; i < arr.length; i++) {
+            if (arr[i] !== "") {
+                arr[i] = arr[i][0].toUpperCase() + arr[i].slice(1);
+            }
+        }
+    let maxArr = 0;
+    let result = " ";
+    let arrNew = [];
+        for (let i = 0; i < arr.length; i++) {
+            if (maxArr < arr[i].length) {
+                maxArr = arr[i].length;
+                result = arr[i];
+            }
+        }
+        for (let i = 0; i < arr.length; i++) {
+            if (result.length === arr[i].length) {
+                arrNew.push(arr[i]);
+            }
+        }
 
+        document.write("Sau khi chuyển hóa: " + arr.join(" ") + "<br>");
+        document.write("Tất cả dài nhất trong chuỗi là: " + arrNew.join(", "));
+
+</script>
 </body>
 </html>
