--- a/ss11_mang/bai_luyen_tap_mang_2/bai 3.html
+++ b/ss11_mang/bai_luyen_tap_mang_2/bai 3.html
@@ -7,13 +7,13 @@
 <body>
 <script>
     let a = prompt('Nhập dãy số');
-    let b= a.split('');
-    let c = [0,1,2,3,4,5,6,7,8,9];
-    let sum = 0 ;
-    for (let i=0;i< b.length;i++) {
-        for (let j=0; j< c.length; j++) {
-            if (b[i] == c[j]) {
-                sum ++
+    let b = a.split('');
+    let c = [0, 1, 2, 3, 4, 5, 6, 7, 8, 9];
+    let sum = 0;
+    for (let i = 0; i < b.length; i++) {
+        for (let j = 0; j < c.length; j++) {
+            if (b[i] === c[j]) {
+                sum++;
             }
         }
     }
