--- a/Case_Study/3_mang_va_loop/bai_2.html
+++ b/Case_Study/3_mang_va_loop/bai_2.html
@@ -6,8 +6,11 @@
 </head>
 <body>
 <script>
-    let arr1 = [0,5,7,23,6,9];
-    let arr2 = [0,4,7,18,6,10,9,17];
+    let a = prompt("Nhập chuỗi số nguyên thứ 1");
+    let arr1 = a.split("");
+    let b = prompt("Nhập chuỗi số nguyên thứ 2");
+    let arr2 = b.split("");
+    document.write(arr1 + "<br>" + arr2 + "<br>");
     let arr3 = [];
     let kiemTra = false;
     let kiemTra1 = false;
