--- a/Case_Study/3_mang_va_loop/bai_3.html
+++ b/Case_Study/3_mang_va_loop/bai_3.html
@@ -6,8 +6,11 @@
 </head>
 <body>
 <script>
-    let numerators = [2,6,9,3,7];
-    let denominators = [3,5,6,4,1];
+    let a = prompt("Nhập chuỗi số nguyên 1");
+    let numerators = a.split("");
+    let b = prompt("Nhập chuỗi số nguyên 2");
+    let denominators = b.split("");
+    document.write(numerators + "<br>" + denominators + "<br>");
     let max = 0;
     let chiSo;
     let ketQua;
