--- a/Case_Study/4_string/bai_1.html
+++ b/Case_Study/4_string/bai_1.html
@@ -30,7 +30,7 @@
         }
 
         document.write("Sau khi chuyển hóa: " + arr.join(" ") + "<br>");
-        document.write("Tất cả dài nhất trong chuỗi là: " + arrNew.join(", "));
+        document.write("Tất cả từ dài nhất trong chuỗi là: " + arrNew.join(", "));
 
 </script>
 </body>
