--- a/Case_Study/1_ve_hinh/bai_2.html
+++ b/Case_Study/1_ve_hinh/bai_2.html
@@ -6,9 +6,10 @@
 </head>
 <body>
 <script>
-    for (let i = 0; i < 5; i++) {
+    let a = prompt("Nhập chiều cao");
+    for (let i = 0; i < a; i++) {
         for (let j = 0; j <= i ; j++) {
-           if (i == 0 || j == 0 || i == 4 || j == i){
+           if (i == 0 || j == 0 || i == a - 1 || j == i){
                 document.write("*");
             }
             else {
