--- a/Case_Study/1_ve_hinh/bai_3.html
+++ b/Case_Study/1_ve_hinh/bai_3.html
@@ -6,8 +6,9 @@
 </head>
 <body>
 <script>
-    for (let i = 0; i < 5; i++) {
-        for (let l = 5; l > i; l--) {
+    let m = prompt("Nhập chiều cao");
+    for (let i = 0; i < m; i++) {
+        for (let l = m; l > i; l--) {
             document.write("&nbsp;&nbsp")
         }
         for (let j = 0; j <= i * 2; j++) {
