--- a/Case_Study/1_ve_hinh/bai_4.html
+++ b/Case_Study/1_ve_hinh/bai_4.html
@@ -6,12 +6,13 @@
 </head>
 <body>
 <script>
-    for (let i = 0; i < 5; i++) {
-        for (let l = 5; l > i; l--) {
+    let a = prompt("Nhập chiều cao");
+    for (let i = 0; i < a; i++) {
+        for (let l = a; l > i; l--) {
             document.write("&nbsp;&nbsp")
         }
         for (let j = 0; j <= i * 2; j++) {
-            if (i == 0 || i == 4 || j == i * 2 || j == 0) {
+            if (i == 0 || i == a - 1 || j == i * 2 || j == 0) {
                 document.write("*");
             } else {
                 document.write("&nbsp;&nbsp");
