--- a/ss12_ham/bai_luyen_tap_tao_va_su_dung_ham_1/bai_3.html
+++ b/ss12_ham/bai_luyen_tap_tao_va_su_dung_ham_1/bai_3.html
@@ -8,16 +8,17 @@
 <script>
     let a = +prompt('Nhập vào số a');
     let b = +prompt('Nhập vào số b');
-    let kQ = soSanh(a,b);
-    alert(kQ);
-    function soSanh(a,b) {
-        let ketQua ;
-        if (a>b) {
+    soSanh(a, b);
+    // alert(ketQua);
+
+    function soSanh(a, b) {
+        let ketQua;
+        if (a > b) {
             ketQua = (a + ' lớn hơn ' + b)
         } else {
-            ketQua = +(a + b) ;
+            ketQua = +(a + b);
         }
-        return ketQua;
+        return alert(ketQua);
     }
 </script>
 </body>
